# Learning-langChain

./: README.md
second_lesson/: .env.example  000-env-file-es.ipynb  000-env-file.ipynb  001-using-llm-model.ipynb  001-using-llm-model.py  002-creating-an-agent.ipynb  002-creating-an-agent.py  003-creating-a-real-agent-es.ipynb  003-creating-a-real-agent-using-sonnet.py  003-creating-a-real-agent.ipynb  003-creating-a-real-agent.py  004-prompts-messages-blocks-multimodal.ipynb  004-prompts-messages-blocks-multimodal.py  005-structured-ouput-es.ipynb  005-structured-ouput.ipynb  005-structured-output-collectingstudent-infor.py  005-structured-output.py  006-tools-creating-bet_prediction-agent.py  006-tools.ipynb  006-tools.py  007-short-term-memory-es.ipynb  007-short-term-memory.ipynb  007-short-term-memory.py  008-mcp.ipynb  008-mcp.py  009-multi-agents-es.ipynb  009-multi-agents-using-groq.py  009-multi-agents.ipynb  009-multi-agents.py  011-mid-to-summ-conversation-es.ipynb  011-mid-to-summ-conversation.py  011-middleware-groq.py  012-mid-to-trim-convesation.ipynb  012-mid-to-trim-convesation.py  013-mid-to-add-HITL-es.ipynb  013-mid-to-add-HITL.py  014-dynamic-agents-es.ipynb  015-dyn-agent-customize-language-es.ipynb  015-dyn-agent-customize-language.py  016-dyn-agent-custom-tool-access.py  (+25 more)
second_lesson/.ipynb_checkpoints/: 001-using-llm-model-checkpoint.ipynb  001-using-llm-model-checkpoint.py  001-using-llm-model-es-checkpoint.ipynb  002-creating-an-agent-checkpoint.ipynb  002-creating-an-agent-es-checkpoint.ipynb  003-creating-a-real-agent-es-checkpoint.ipynb  (+32 more)
(+17 files in other folders)
